--- a/index1.html
+++ b/index1.html
@@ -542,7 +542,7 @@ E メール（<a href="mailto:info@pw-japan.co.jp">info@pw-japan.co.jp</a><a hre
           </tr>
           <tr>
             <td><div align="center">
-              <div align="center" class="style94">延長保証運営会社： 株式会社プロダクト・ワランティ・ジャパン<br />
+              <div align="center" class="style94">延長保証運営会社： 株式会社プロダクト<br />
                 本社所在地： <span class="style68">〒100-0006　東京都千代田区有楽町1-7-1有楽町電気ビル南館4階</span><br />
                 Mail <a href="mailto:info@pw-japan.co.jp">info@pw-japan.co.jp</a><a href="info@pw-japan.co.jp"></a></div>
 </div></td>
